# erc20-token-bridge

./: .example.env  .gitignore  README.md  pyproject.toml
scripts/: config_mainnet.json  config_testnet.json  token_transfer.py
scripts/polygon-eth/: config_mainnet.json  config_testnet.json  token_transfer.py
