[tool.poetry]
name = "erc20-token-bridge"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "erc20_token_bridge"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.14.0"
ledgereth = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
